--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 	<meta charset="utf-8">
 		 <title>Sandika Prima</title>
-		 <link rel="stylesheet" href="stylesandiuh.css">
+		 <link rel="stylesheet" href="stylesheet.css">
 	</head>
 	<body>
 		<div class="kop">
